--- a/src/Styles.css
+++ b/src/Styles.css
@@ -1,4 +1,4 @@
-header, section, footer, aside, nav, article, figure,  {
+header, section, .recipes-display, footer, aside, nav, article, figure,  {
   display: block;
 }
 body {
@@ -57,20 +57,18 @@ nav li a:hover, nav li a.current {
   color: #000000;
 }
 
-section.recipes {
+section, .recipes-display {
   float: left;
   width: 659px;
   border-right: 1px solid #eeeeee;
 }
 
-section.something-here {}
-section.shopping-list{}
 article {
   clear: both;
   overflow: auto;
   width: 100%;
 }
-  
+
 hgroup {
   margin-top: 40px;
 }
@@ -147,7 +145,7 @@ footer {
   transform: scale(1.1);
   transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
 }
-    
+
 .modal-content {
   position: absolute;
   top: 50%;
@@ -159,7 +157,7 @@ footer {
   overflow: scroll;
   border-radius: 0.5rem;
 }
-    
+
 .close-button {
   float: right;
   width: 1.5rem;
@@ -169,11 +167,11 @@ footer {
   border-radius: 0.25rem;
   background-color: lightgray;
 }
-    
+
 .close-button:hover {
   background-color: darkgray;
 }
-    
+
 .show-modal {
   opacity: 1;
   visibility: visible;
